[package]
name = "hoarder"
version = "0.1.0"
edition = "2021"
description = "A simple dotfiles manager that make things clearly"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
